--- a/FutbolApp/View/EditPlayersPage.xaml
+++ b/FutbolApp/View/EditPlayersPage.xaml
@@ -14,51 +14,36 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <StackLayout Orientation="Horizontal" Padding="8" Spacing="16" BackgroundColor="#F2C500">
-                <Label Text="Favorite player?"
-                        TextColor="White" 
-                        VerticalOptions="Center" 
-                        HorizontalOptions="Start"
-                        FontSize="16">
-                    <Label.FontSize>
-                        <OnPlatform x:TypeArguments="x:Double" iOS="16" Android="16" WinPhone="12" />
-                    </Label.FontSize>
-                </Label>
-                <Switch IsToggled="{Binding AtHome}" 
-                        HorizontalOptions="CenterAndExpand" 
-                        VerticalOptions="Center"/>
+            <StackLayout Orientation="Horizontal" Padding="8" Spacing="16" BackgroundColor="Blue">
+      
+    
                 <Button Text="Remove Player" 
-                        Command="{Binding RemovePlayerCommand}" 
+                        Command="{Binding RemovePlayerOperation}" 
                         IsEnabled="{Binding IsNotBusy}" 
                         VerticalOptions="Center"
                         TextColor="White"
-                        BackgroundColor="#F2C500"
+                        BackgroundColor="Red"
+                        BorderWidth="0"/>
+                
+                <Button Text="Rate Player" 
+                        Command="{Binding RatePlayersOperation}" 
+                        IsEnabled="{Binding IsNotBusy}" 
+                        VerticalOptions="Center"
+                        TextColor="White"
+                        BackgroundColor="Green"
                         BorderWidth="0"/>
             </StackLayout>
-            <StackLayout  Grid.Row="1" Orientation="Horizontal" Padding="8,0,8,4" Spacing="16" 
-                         BackgroundColor="#F2C500">
-                <Label Text="Location: "
-                       VerticalOptions="End"
-                        TextColor="White" />
-                <Entry Text="{Binding Location}" HorizontalOptions="FillAndExpand">
-                    <Entry.Triggers>
-                        <DataTrigger TargetType="Entry"
-                             Binding="{Binding AtHome}"
-                             Value="true">
-                            <Setter Property="IsEnabled" Value="false"/>
-                        </DataTrigger>
-                    </Entry.Triggers>
-                </Entry>
-            </StackLayout>
+
             <ListView 
                 Grid.Row="2"
                 GroupDisplayBinding="{Binding Key}"
                 IsGroupingEnabled="true"
                 HasUnevenRows ="true"
-                ItemsSource="{Binding PlayersGrouped}"
+                ItemsSource="{Binding playersGrouped}"
+                SelectedItem="{Binding SelectedPlayer}"
                 IsPullToRefreshEnabled="true"
                 IsRefreshing="{Binding IsBusy, Mode=OneWay}"
-                RefreshCommand="{Binding LoadPlayersCommand}"
+                RefreshCommand="{Binding FetchPlayersOperation}"
                 x:Name="ListViewPlayers">
              <ListView.ItemTemplate>
                 <DataTemplate>
@@ -75,7 +60,7 @@
                             <Label Grid.Column="1" 
                                    HorizontalOptions="End" 
                                    FontSize="16" 
-                                   Text="{Binding AtHomeDisplay}" 
+                                   Text="{Binding TeamDisplay}" 
                                    Style="{DynamicResource ListItemTextStyle}" 
                                    TextColor="#979797" 
                                    VerticalTextAlignment="Center"/>
